--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-relay": "^0.0.0-experimental-183bdd28",
+    "react-scripts": "3.4.3",
+    "relay-runtime": "^10.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn run relay && react-scripts start",
     "build": "react-scripts build",
+    "relay": "yarn run relay-compiler --schema schema.graphql --src ./src/ --watchman false $@",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-relay": "^10.0.1",
+    "graphql": "^15.3.0",
+    "relay-compiler": "^10.0.1"
   }
 }
